# Underwater-robot-navigation

./: .gitignore  README.md  git-auto.sh  git_auto.py  pyproject.toml  requirements.txt  命令行  时间对齐
WitHighModbus/: device_model.py  imu_realtime_pipeline.py  imu_xy_angle_zeroing.py  imu_xy_zero.py  manager.py  sensor1_realtime.py  sensor2.py  test002.py  tmux_telemetry_manager.py  tool_new.py  volt32_logger.py
WitHighModbus/logs/: flight_data_20250331_154753.csv
apps/: imu_filtered_data_20250903.csv  imu_raw_data_20250903.csv  imu_realtime_pipeline.py  motor_data_20250903_200143.csv  motor_data_20250903_222932.csv  tmux_telemetry_manager.py  volt32_logger.py
apps/acquire/: DVL_logger.py  Volt32_logger.py  imu_logger.py  power_logger.py  sensor_capture_launcher.py
apps/tools/: dvl_data_verifier.py  dvl_safety_probe.py  imu_baud_switch.py  imu_data_verifier.py  imu_realtime_pipeline.py  imu_xy_zero.py  multisensor_postproc.py  tmux_telemetry_manager.py  volt32_data_verifier.py  volt32_logger.py
config/devices/: DVL.yaml  imu.yaml
data/: dvl_parsed_20251106_173912.csv  dvl_raw_lines_20251106_173912.csv
data/2025-11-28/imu/: imu_raw_log_20251128_112615.csv  imu_raw_log_20251128_112742.csv  imu_raw_log_20251128_115055.csv  imu_raw_log_20251128_115323.csv  min_imu_tb_20251128_112615.csv  min_imu_tb_20251128_112742.csv  min_imu_tb_20251128_115055.csv  min_imu_tb_20251128_115323.csv
data/2025-11-28/volt/: motor_data_20251128_111656.csv
docs/: shiyanjilu.md  timebase_spec.md  tools_overview.md  传感器与协议说明.md  传感器读取程序  命令行  导航运行总览.md  文档总览.md  时间融合与接口约定.md  演进记录与维护约束.md  调试回放与排障.md
docs/design/: architecture.md  dataset_spec.md  nav_p0_local_change_summary_20260312.md
docs/overview/: eskf_design.md
docs/protocols/: HoverH1000_PD6.md  imu_witmotion_modbus.md
docs/sensors/: dvl_hover_h1000_setup.md  imu_hwt9073_notes.md
nav_core/: CMakeLists.txt  README.md  新目录.txt
nav_core/config/: eskf2d.yaml  nav_daemon.yaml  快捷命令行.txt
nav_core/docs/: README.md  device_test_and_debug.md  imu_dvl_preprocess_and_fusion_guidelines.md  nav_core_runtime.md  update_guidelines.md  操作说明.md
nav_core/docs/filters/: eskf_design.aux  eskf_design.fdb_latexmk  eskf_design.fls  eskf_design.out  eskf_design.tex
nav_core/include/: bin_logger.h  dvl_driver.h  eskf.h  imu_driver_wit.h  timebase.h
nav_core/include/nav_core/: bin_logger.h  bin_logger.hpp  dvl_driver.hpp  eskf.hpp  imu_driver_wit.hpp  imu_rt_filter.h  imu_rt_filter.hpp  imu_types.h  log_packets.h  log_packets.hpp  logging.hpp  nav_state_publisher.h  nav_state_publisher.hpp  status.hpp  timebase.hpp  types.hpp
nav_core/include/nav_core/app/: device_binding.hpp  imu_port_selector.hpp  nav_daemon_config.hpp  nav_daemon_devices.hpp  nav_daemon_dvl_pipeline.hpp  nav_daemon_health_audit.hpp  nav_daemon_imu_pipeline.hpp  nav_daemon_logging.hpp  nav_daemon_loop_state.hpp  nav_daemon_publish.hpp  nav_daemon_sensor_pipeline.hpp  nav_runtime_status.hpp  nav_state_replay.hpp  sample_timing.hpp
nav_core/include/nav_core/core/: logging.hpp  math.hpp  status.hpp  timebase.hpp  types.hpp
nav_core/include/nav_core/drivers/: dvl_driver.hpp  dvl_protocol.hpp  imu_driver_wit.hpp  imu_modbus_probe.hpp  imu_serial_diagnostics.hpp  serial_binding.hpp  serial_port_utils.hpp
nav_core/include/nav_core/estimator/: eskf.hpp  eskf_config_yaml.hpp  eskf_math.hpp  graph_smoother_2d.hpp  nav_health_monitor.hpp  online_estimator.hpp
nav_core/include/nav_core/filters/: eskf.hpp  filter_common.hpp  imu_rt_filter.hpp
nav_core/include/nav_core/io/: bin_logger.hpp  log_packets.hpp  nav_state_publisher.hpp
nav_core/include/nav_core/preprocess/: dvl_rt_preprocessor.hpp  imu_rt_preprocessor.hpp
nav_core/src/: bin_logger.cpp  dump_imu_bin.cpp  dump_nav_logs.cpp  dvl_driver.cpp  eskf.cpp  imu_driver_wit.cpp  imu_rt_filter.cpp  nav_daemon.cpp  nav_state_publisher.cpp  timebase.cpp
nav_core/src/nav_core/app/: device_binding.cpp  imu_port_selector.cpp  nav_daemon.cpp  nav_daemon_config.cpp  nav_daemon_devices.cpp  nav_daemon_dvl_pipeline.cpp  nav_daemon_health_audit.cpp  nav_daemon_imu_pipeline.cpp  nav_daemon_logging.cpp  nav_daemon_loop_state.cpp  nav_daemon_publish.cpp  nav_daemon_runner.cpp  nav_daemon_sensor_pipeline.cpp  nav_runtime_status.cpp  nav_state_replay.cpp  sample_timing.cpp
nav_core/src/nav_core/app/tools/: DVL_selftest.cpp  imu_modbus_probe.cpp  nav_state_replay.cpp
nav_core/src/nav_core/core/: logging.cpp  timebase.cpp
nav_core/src/nav_core/drivers/: dvl_driver.cpp  dvl_protocol.cpp  imu_driver_wit.cpp  imu_modbus_probe.cpp  imu_serial_diagnostics.cpp  serial_port_utils.cpp
nav_core/src/nav_core/estimator/: eskf.cpp  eskf_config_yaml.cpp  eskf_core.cpp  eskf_propagate.cpp  eskf_update_dvl.cpp  eskf_update_yaw.cpp  graph_smoother_2d.cpp  nav_health_monitor.cpp  online_estimator.cpp
nav_core/src/nav_core/filters/: eskf.cpp  imu_rt_filter.cpp
nav_core/src/nav_core/io/: bin_logger.cpp  nav_state_publisher.cpp
nav_core/src/nav_core/preprocess/: dvl_rt_preprocessor.cpp  imu_rt_preprocessor.cpp
nav_core/tests/: test_device_binding.cpp  test_imu_modbus_probe.cpp  test_imu_port_selector.cpp  test_imu_serial_diagnostics.cpp  test_nav_daemon_config.cpp  test_nav_diagnostic_fixture.cpp  test_nav_event_logger.cpp  test_nav_health_monitor.cpp  test_nav_runtime_status.cpp  test_nav_state_replay.cpp  test_pty_utils.hpp  test_sample_timing.cpp  test_serial_reconnect_integration.cpp
nav_core/tools/: dump_nav_logs_csv.py  merge_robot_timeline.py  parse_nav_timing.py  replay_compare.py  usb_serial_snapshot.py
nav_core/tools/tests/: test_merge_robot_timeline.py  test_replay_compare.py  test_usb_serial_snapshot.py
shared/msg/: nav_state.hpp
tests/: test_acquisition_diagnostics.py  test_channel_frames.py  test_dvl_protocol.py  test_sensor_capture_launcher.py
tools/: project_size_report.txt
uwnav.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
uwnav/drivers/WitHighModbus/: .py  tool.py  (+5 more)
uwnav/io/: acquisition_diagnostics.py  channel_frames.py  data_paths.py  timebase.py
uwnav/sensors/: dvl_hover_h1000.py  imu.py
(+22 files in other folders)
