[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uwnav"
version = "0.0.1"
description = "Underwater navigation stack"
requires-python = ">=3.8"
dependencies = ["numpy", "pyserial", "pyyaml"]

[tool.setuptools.packages.find]
where = ["."]
include = ["uwnav*", "apps*"]   # 把 apps 做成包一并安装

[project.scripts]
imu-pipeline = "apps.imu_realtime_pipeline:main"
volt32-logger = "apps.volt32_logger:main"
tmux-manager  = "apps.tmux_telemetry_manager:main"

